added part of changes

--- a/rebar.config
+++ b/rebar.config
@@ -25,12 +25,7 @@
     warn_missing_spec_all
 ]}.
 
-{deps, [
-    % {msgpack_proto,
-    %     {git, "git@github.com:rbkmoney/msgpack-proto.git",
-    %     {branch, "master"}}
-    % }
-]}.
+{deps, []}.
 
 %% XRef checks
 {xref_checks, [
